--- a/resume_categorizer_app/templates/upload_resume.html
+++ b/resume_categorizer_app/templates/upload_resume.html
@@ -71,5 +71,14 @@
       <button type="submit">Upload</button>
     </form>
   </div>
+
+  <script>
+    window.onload = function () {
+      const form = document.querySelector('form');
+      if (form) {
+        form.reset();
+      }
+    };
+  </script>
 </body>
 </html>
